--- a/client/app/src/main/res/layout/post_grid_item.xml
+++ b/client/app/src/main/res/layout/post_grid_item.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_marginTop="2dp"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="1dp">
 
     <ImageView
         android:id="@+id/preview_post"
-        android:layout_width="98dp"
-        android:layout_height="98dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/placeholder"
         tools:ignore="ContentDescription" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
