--- a/client/app/src/main/res/navigation/mobile_navigation.xml
+++ b/client/app/src/main/res/navigation/mobile_navigation.xml
@@ -151,7 +151,15 @@
             <action
                 android:id="@+id/action_new_route_info_to_new_route_map"
                 app:destination="@id/navigation_new_route_map" />
+            <action
+                android:id="@+id/action_navigation_new_route_info_to_newRoutePhotosFragment"
+                app:destination="@id/newRoutePhotosFragment" />
         </fragment>
+        <fragment
+            android:id="@+id/newRoutePhotosFragment"
+            android:name="com.unina.natourkt.presentation.new_route.NewRoutePhotosFragment"
+            android:label="fragment_new_route_photos"
+            tools:layout="@layout/fragment_new_route_photos" />
 
     </navigation>
 
