--- a/client/app/src/main/res/layout/item_load.xml
+++ b/client/app/src/main/res/layout/item_load.xml
@@ -44,7 +44,7 @@
             android:insetTop="0dp"
             android:insetBottom="0dp"
             android:minHeight="0dp"
-            android:text="Riprova" />
+            android:text="RIPROVA" />
 
     </LinearLayout>
 
